crates/pcb-zen/tests/snapshots/load_diagnostics__snapshot_load_nonexistent_file.snap
---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: snapshot_output
---
Error: File not found: [TEMP_DIR]nonexistent.zen
   ╭─[ [TEMP_DIR]test.zen:3:1 ]
   │
 3 │ load("./nonexistent.zen", "foo")
   │ ────────────────┬───────────────  
   │                 ╰───────────────── File not found: [TEMP_DIR]nonexistent.zen
───╯
